--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port = 8585
+server.servlet.context-path=/workintech
 
+#Actuator
+management.endpoints.web.exposure.include = info,health,mappings
+
+management.info.env.enabled = true
+
+info.app.name = Spring Boot Project 2
+info.app.description = Learning to use Spring Boot
+info.app.version = 3.2.0
